--- a/Heart disease prediction.ipynb
+++ b/Heart disease prediction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " I have collected the dataset from Kaggle (https://www.kaggle.com/ronitf/heart-disease-uci) and I will be using Machine Learning to predict whether any person is suffering from heart disease\n",
+    "This data is from Kaggle (https://www.kaggle.com/ronitf/heart-disease-uci) and I will be using Machine Learning to predict if a person has or doesn't have heart disease\n",
     " \n",
     "1. age\n",
     "2. sex\n",
